# llm_wiki

./: .gitignore  package-lock.json  package.json  start-server.sh  vite.config.ts
scripts/: dev-all.sh  start-server-debug.sh  start-server.sh
src/: App.tsx
src-server/: Cargo.toml
src-server/src/: auth.rs  auth_jwt.rs  auth_pass.rs  config.rs  main.rs  panic_guard.rs
src-server/src/db/: mod.rs  operations.rs  schema.rs
src-server/src/routes/: auth.rs  claude.rs  clip.rs  config.rs  fs.rs  mod.rs  project.rs  search.rs  vector.rs  wiki.rs
src-server/src/services/: claude.rs  extract_images.rs  fs.rs  mod.rs  project.rs  vector.rs
src-server/src/types/: auth.rs  error.rs  mod.rs  wiki.rs
src/api/: admin.ts  claude.ts  client.ts  clip.ts  config.ts  fs.ts  index.ts  project.ts  search.ts  vector.ts
src/commands/: fs.ts
src/components/: error-boundary.tsx
src/components/auth/: login-page.tsx
src/components/chat/: chat-input.tsx  chat-message.tsx  chat-panel.tsx
src/components/editor/: file-preview.tsx  wiki-editor.tsx
src/components/graph/: graph-view.tsx
src/components/layout/: activity-panel.tsx  app-layout.tsx  content-area.tsx  icon-sidebar.tsx  knowledge-tree.tsx  research-panel.tsx  sidebar-panel.tsx  update-banner.tsx
src/components/lint/: lint-view.tsx
src/i18n/: en.json  index.ts  zh.json
src/lib/: claude-cli-transport.ts  deep-research.ts  embedding.ts  extract-source-images.ts  markdown-image-resolver.ts  project-identity.ts  project-store.ts  tauri-fetch.ts  templates.ts  web-search.ts
src/stores/: auth-store.ts  wiki-store.ts
(+10 files in other folders)
