[package]
name = "llm-wiki-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Async utilities
async-stream = "0.3"
futures = "0.3"

# HTTP client for web search
reqwest = { version = "0.12", features = ["blocking"] }
urlencoding = "2.1"
regex = "1"

# File processing (reuse from tauri)
pdfium-render = "0.9"
calamine = "0.34"
zip = "2"
docx-rs = "0.4"
image = { version = "0.25", default-features = false, features = ["png"] }
base64 = "0.22"
sha2 = "0.10"

# Vector store
lancedb = "0.27"
arrow-array = "57"
arrow-schema = "57"

# Claude CLI subprocess
which = "7"
uuid = { version = "1", features = ["v4"] }

# Misc
chrono = { version = "0.4", features = ["clock"] }
tracing = "0.1"
tracing-subscriber = "0.3"
dotenvy = "0.15"
dirs = "5"
fs_extra = "1.3"
mime_guess = "2.0"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }